--- a/web_trial/backend/frontend/templates/index.html
+++ b/web_trial/backend/frontend/templates/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="static/css/animate.css">
     <link rel="stylesheet" href="static/css/font-awesome.min.css">
   </head>
-
 <body>
 
   <div class="sub-header">
@@ -109,13 +108,13 @@
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" href="/">
                   Best useful links ?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                Get <strong>the best villa</strong> website template in HTML CSS and Bootstrap for your business. TemplateMo provides you the <a href="https://www.google.com/search?q=best+free+css+templates" target="_blank">best free CSS templates</a> in the world. Please tell your friends about it.</div>
+                Get <strong>the best villa</strong> website template in HTML CSS and Bootstrap for your business. TemplateMo provides you the <a href="/" target="_blank">best free CSS templates</a> in the world. Please tell your friends about it.</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -175,7 +174,7 @@
       <div class="row">
         <div class="col-lg-4 offset-lg-4">
           <div class="section-heading text-center">
-            <h6>| Video View</h6>
+            <h6>| Home Visual </h6>
             <h2>Get Closer View & Different Feeling</h2>
           </div>
         </div>
@@ -189,7 +188,7 @@
         <div class="col-lg-10 offset-lg-1">
           <div class="video-frame">
             <img src="static/images/video-frame.jpg" alt="">
-            <a href="https://youtube.com" target="_blank"><i class="fa fa-play"></i></a>
+            <a href="/" target="_blank"><i class="fa fa-play"></i></a>
           </div>
         </div>
       </div>
@@ -537,9 +536,9 @@
   <footer>
     <div class="container">
       <div class="col-lg-8">
-        <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. 
+        <p>Copyright © 2023 Villa Agency Co., Ltd. All rights reserved. 
         
-        Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+        Design: <a rel="nofollow" href="/" target="_blank">Developer</a></p>
       </div>
     </div>
   </footer>
