--- a/web_trial/backend/frontend/templates/property-details.html
+++ b/web_trial/backend/frontend/templates/property-details.html
@@ -2,47 +2,19 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
     <title>Villa Agency - Property Detail Page</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-villa-agency.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
-
-TemplateMo 591 villa agency
-
-https://templatemo.com/tm-591-villa-agency
-
--->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/fontawesome.css">
+    <link rel="stylesheet" href="static/css/templatemo-villa-agency.css">
+    <link rel="stylesheet" href="static/css/owl.css">
+    <link rel="stylesheet" href="static/css/icomoon.css">
+    <link rel="stylesheet" href="static/css/animate.css">
+    <link rel="stylesheet" href="static/css/font-awesome.min.css">
   </head>
-
 <body>
-
-  <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-  <!-- ***** Preloader End ***** -->
-
   <div class="sub-header">
     <div class="container">
       <div class="row">
@@ -110,7 +82,7 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-8">
           <div class="main-image">
-            <img src="assets/images/single-property.jpg" alt="">
+            <img src="static/images/single-property.jpg" alt="">
           </div>
           <div class="main-content">
             <span class="category">Apparment</span>
@@ -162,19 +134,19 @@ https://templatemo.com/tm-591-villa-agency
           <div class="info-table">
             <ul>
               <li>
-                <img src="assets/images/info-icon-01.png" alt="" style="max-width: 52px;">
+                <img src="static/images/info-icon-01.png" alt="" style="max-width: 52px;">
                 <h4>450 m2<br><span>Total Flat Space</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-02.png" alt="" style="max-width: 52px;">
+                <img src="static/images/info-icon-02.png" alt="" style="max-width: 52px;">
                 <h4>Contract<br><span>Contract Ready</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-03.png" alt="" style="max-width: 52px;">
+                <img src="static/images/info-icon-03.png" alt="" style="max-width: 52px;">
                 <h4>Payment<br><span>Payment Process</span></h4>
               </li>
               <li>
-                <img src="assets/images/info-icon-04.png" alt="" style="max-width: 52px;">
+                <img src="static/images/info-icon-04.png" alt="" style="max-width: 52px;">
                 <h4>Safety<br><span>24/7 Under Control</span></h4>
               </li>
             </ul>
@@ -224,7 +196,7 @@ https://templatemo.com/tm-591-villa-agency
                       </div>
                     </div>
                     <div class="col-lg-6">
-                      <img src="assets/images/deal-01.jpg" alt="">
+                      <img src="static/images/deal-01.jpg" alt="">
                     </div>
                     <div class="col-lg-3">
                       <h4>All Info About Apartment</h4>
@@ -249,7 +221,7 @@ https://templatemo.com/tm-591-villa-agency
                       </div>
                     </div>
                     <div class="col-lg-6">
-                      <img src="assets/images/deal-02.jpg" alt="">
+                      <img src="static/images/deal-02.jpg" alt="">
                     </div>
                     <div class="col-lg-3">
                       <h4>Detail Info About New Villa</h4>
@@ -274,7 +246,7 @@ https://templatemo.com/tm-591-villa-agency
                       </div>
                     </div>
                     <div class="col-lg-6">
-                      <img src="assets/images/deal-03.jpg" alt="">
+                      <img src="static/images/deal-03.jpg" alt="">
                     </div>
                     <div class="col-lg-3">
                       <h4>Extra Info About Penthouse</h4>
@@ -296,9 +268,9 @@ https://templatemo.com/tm-591-villa-agency
   <footer class="footer-no-gap">
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. 
+        <p>Copyright © 2023 Villa Agency Co., Ltd. All rights reserved. 
         
-        Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+        Design: <a rel="nofollow" href="/" target="_blank">Developer</a></p>
       </div>
     </div>
   </footer>
@@ -307,10 +279,10 @@ https://templatemo.com/tm-591-villa-agency
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/counter.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="static/js/isotope.min.js"></script>
+  <script src="static/js/owl-carousel.js"></script>
+  <script src="static/js/counter.js"></script>
+  <script src="static/js/custom.js"></script>
 
   </body>
 </html>
